# harmonic_degree

./: .gitignore  CITATION.cff  CLAUDE.md  HOLR_functions.py  Higher_order_harmonic_degree.py  LICENSE  README.md  plot_average.ipynb  requirements.txt
.github/workflows/: tests.yml
Clustering/: Clustering_examples.ipynb  Producing_Harmonic_degree_clustering.ipynb
Data/: NETWORKS.md  PPT-Ohmnet_tissues-data.txt
Data/bio-yeast/: bio-yeast.mtx
Euroroad_results/: Euroroad_make_all_results.ipynb
Finding_harmonic_Morph/: Harmonic_Modularity.ipynb
GNN_partition_function/: README.md  Real_nets_GNN.ipynb  model.py
Higher_Order/: Higher_order_synthetic_examples.ipynb
Laplacian/: Real_networks_LRG.ipynb
harmonic_morphisms/: README.md  pyproject.toml
harmonic_morphisms/data/precomputed/: Ns_results.pkl  b9_results.pkl  bf_results.pkl  em_results.pkl  er_results.pkl  lc_results.pkl  pl_results.pkl  pw_results.pkl  tort_results.pkl  we_results.pkl  yeast_results.pkl
harmonic_morphisms/docs/: api.md  paper_figures.md  quickstart.md
harmonic_morphisms/notebooks/: 01_euroroad_laplacian.ipynb  02_average_curves.ipynb  03_individual_laplacian.ipynb  04_higher_order_synthetic.ipynb  05_higher_order_real.ipynb  06_equilibrium_laplacian.ipynb
harmonic_morphisms/src/harmonic_morphisms/: __init__.py  core.py  higher_order.py
harmonic_morphisms/tests/: conftest.py  test_core.py  test_higher_order.py  test_integration.py  test_simplicial.py  test_smoke.py
pre_computed_measures/: Cel_results.pkl  Euroroad_results.pkl  Sif_results.pkl  hf_results.pkl  wpl_results.pkl
(+273 files in other folders)
