[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "harmonic-morphisms"
version = "0.1.0"
description = "Harmonic degree diagnostics for network renormalization"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
notebooks = ["jupyter", "pandas"]

[tool.setuptools.packages.find]
where = ["src"]
